Say what order each partition carrier has, and give the ones with none no way to ask
A copy through Map.copyOf salts the order a value hands back. Where a reader
took an order off such a copy, the answer depended on the run; where nothing
did, the copy only hid that a value had no order to give. This settles the
carriers of the partition package one by one, by what each is asked.

The elements a value was reached through, outermost step first, were kept in a
map and copied, so the readings of a row over its steps were built and cut at a
bound in whatever order the copy handed them back. They are one value now,
ElementsTaken, which keeps the steps in the order they were taken and answers
which element was taken at a step and whether two values agree. The same value
stands in the class of a position, which held its own copy of the map.

The numbers a search has settled are a key for what a position can take. What
they name is held inside the one operation that takes them onto the rules, and
nothing else gets a map of them to walk. The positions a walk fixed are told to
the region one at a time, so the order the walk fixed them in is kept. The gaps
a reading found are kept in the order they were found, which is what the open
closure already said, and their readers ask an order-blind set.

Where a value was made only to be asked by one key, it is a Lookup: what the
walk collected at each comparison. The tests that walked every account it
kept now ask each comparison the body writes, the way a border does; an empty
answer cannot be told from nothing collected, so those are not observed, and
the one test whose two sides could both come out empty says so.

A baseline stated the composition by naming nothing, and its size was the
variant tag. An origin is now the values the module states or the composition,
and a row that names no module value is no origin at all. Nothing asks a
lookup whether it is empty.

The rule that a moved carrier holds no Map or Set beside a Lookup, 